...
      initialTime: TimeOfDay(
        hour: currentLocal.hour,
        minute: currentLocal.minute,
      ),
      helpText: 'Yeni saati seçin',
      cancelText: 'Vazgeç',
      confirmText: 'Tamam',
      builder: (context, child) {
        final media = MediaQuery.of(context);
        return MediaQuery(
          data: media.copyWith(alwaysUse24HourFormat: true),
          child: child!,
        );
...
